testdata/crashers/31273d597a36ebfb61d157a4e58994db2a480986.output
panic: runtime error: slice bounds out of range [recovered]
	panic: runtime error: slice bounds out of range

goroutine 1 [running]:
github.com/robfig/soy/parse.(*tree).recover(0xc0000a8dc0, 0xc0000b9df8)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:1189 +0x2a9
panic(0x11bac00, 0x133ab70)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/goroot/src/runtime/panic.go:513 +0x1b9
github.com/robfig/soy/parse.unquoteString(0xc0000d4de8, 0x7, 0x10054ce, 0xc00006e120, 0x170d, 0x3)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/quote.go:79 +0x93d
github.com/robfig/soy/parse.(*tree).newValueNode(0xc0000a8dc0, 0xc, 0x2df0, 0xc0000d4de7, 0x9, 0x6, 0x1)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:1090 +0x70c
github.com/robfig/soy/parse.(*tree).parseExprFirstTerm(0xc0000a8dc0, 0xc0000b92b0, 0x114a3e1)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:851 +0x1b1
github.com/robfig/soy/parse.(*tree).parseExpr(0xc0000a8dc0, 0x4, 0x1f, 0xc0000ae180)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:821 +0x58
github.com/robfig/soy/parse.(*tree).parseExpr(0xc0000a8dc0, 0x3, 0x26, 0xc0000ae058)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:830 +0xc2
github.com/robfig/soy/parse.(*tree).parseExpr(0xc0000a8dc0, 0x0, 0x11e6564, 0x10)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:830 +0xc2
github.com/robfig/soy/parse.(*tree).parseIf(0xc0000a8dc0, 0x3e, 0x2db5, 0xc0000d4db3, 0x2, 0xc00009c4c0, 0x0)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:506 +0x587
github.com/robfig/soy/parse.(*tree).beginTag(0xc0000a8dc0, 0x2db5, 0xc0000d4db3)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:138 +0x3c0
github.com/robfig/soy/parse.(*tree).textOrTag(0xc0000a8dc0, 0x3, 0x2db3, 0xc0000d4db2, 0x1, 0xc0000b97b0, 0x3, 0x3, 0x1210580, 0xc00009c4c0, ...)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:108 +0x82f
github.com/robfig/soy/parse.(*tree).itemList(0xc0000a8dc0, 0xc0000b97b0, 0x3, 0x3, 0x4)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:60 +0x1b6
github.com/robfig/soy/parse.(*tree).parseFor(0xc0000a8dc0, 0x3d, 0x2c31, 0xc0000d4c2a, 0x7, 0xc00000bfa0, 0x0)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:488 +0x2d8
github.com/robfig/soy/parse.(*tree).beginTag(0xc0000a8dc0, 0x2c31, 0xc0000d4c2a)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:146 +0x45e
github.com/robfig/soy/parse.(*tree).textOrTag(0xc0000a8dc0, 0x3, 0x2c2a, 0xc0000d4c29, 0x1, 0xc0000b9ad0, 0x1, 0x1, 0x1210580, 0xc00000bfa0, ...)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:108 +0x82f
github.com/robfig/soy/parse.(*tree).itemList(0xc0000a8dc0, 0xc0000b9ad0, 0x1, 0x1, 0x4)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:60 +0x1b6
github.com/robfig/soy/parse.(*tree).parseTemplate(0xc0000a8dc0, 0x48, 0x2b50, 0xc0000d4b48, 0x8, 0x2, 0xc00000e600)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:754 +0x1c7
github.com/robfig/soy/parse.(*tree).beginTag(0xc0000a8dc0, 0x2b50, 0xc0000d4b48)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:135 +0x9ba
github.com/robfig/soy/parse.(*tree).textOrTag(0xc0000a8dc0, 0x3, 0x2b48, 0xc0000d4b47, 0x1, 0xc0000b9d98, 0x1, 0x1, 0x12105c0, 0xc00000bde0, ...)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:108 +0x82f
github.com/robfig/soy/parse.(*tree).itemList(0xc0000a8dc0, 0xc0000b9d98, 0x1, 0x1, 0xc0000a5a40)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:60 +0x1b6
github.com/robfig/soy/parse.SoyFile(0x0, 0x0, 0xc0000d2000, 0x2df0, 0x0, 0x0, 0x0)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/parse.go:41 +0x171
github.com/robfig/soy.(*Bundle).Compile(0xc00006e060, 0x0, 0x0, 0x0)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/bundle.go:146 +0x11d
github.com/robfig/soy.Fuzz(0x4170000, 0x2df0, 0x200000, 0x11d40a0)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/fuzz.go:7 +0x165
go-fuzz-dep.Main(0x11f0280)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/goroot/src/go-fuzz-dep/main.go:54 +0xad
main.main()
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/go.fuzz.main/main.go:10 +0x2d

goroutine 8 [chan send]:
github.com/robfig/soy/parse.(*lexer).errorf(0xc0000a5a40, 0x11e7d90, 0xc, 0x0, 0x0, 0x0, 0xc000045fa8)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/lexer.go:435 +0xc7
github.com/robfig/soy/parse.lexInsideTag(0xc0000a5a40, 0x11f02b8)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/lexer.go:607 +0xda3
github.com/robfig/soy/parse.(*lexer).run(0xc0000a5a40)
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/lexer.go:356 +0x6a
created by github.com/robfig/soy/parse.lex
	/var/folders/0z/jj76r3z526g9lf3k87cmydyh0000gn/T/go-fuzz-build540080373/gopath/src/github.com/robfig/soy/parse/lexer.go:337 +0xe0
exit status 2